...
    
    func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            let text = makeResultMessage()
            
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть еще раз!")
            
            viewController?.show(quiz: viewModel)
            
        } else {
...
